# heartmeter

./: .gitignore  LICENSE  README.md  docker-compose.yaml
common/: README.md  pyproject.toml
common/src/common/: logger.py  pyroscope.py  sentry.py  tracing.py
diary/: .env.docker  .env.template  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
diary/src/diary/: config.py  main.py
diary/src/diary/application/: dto.py  exceptions.py  interfaces.py  measurement.py  report.py  user.py
diary/src/diary/domain/: models.py
diary/src/diary/infrastructure/db/: __init__.py  config.py  factory.py  gateways.py  tables.py
diary/src/diary/infrastructure/db/migrations/: env.py
diary/src/diary/infrastructure/db/migrations/versions/: ca9da8fc4470_init.py
diary/src/diary/infrastructure/di/: __init__.py  db.py  interactors.py  rmq.py
diary/src/diary/infrastructure/log/: config.py  setup.py
diary/src/diary/infrastructure/rmq/: config.py  publisher.py
diary/src/diary/presentation/api/: config.py  depends.py
diary/src/diary/presentation/api/middlewares/: request_id.py
diary/src/diary/presentation/api/models/: __init__.py  base.py  models.py
diary/src/diary/presentation/api/routes/: exceptions.py  measurements.py  reports.py  users.py
k6/: README.md  load.js
lib/: go.mod
lib/slogger/: error.go
monitoring/grafana/dashboards/: cadvisor.json  fastapi.json  logs.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/datasources/: datasource.yaml
monitoring/grafana/provisioning/plugins/: pyroscope.yaml
monitoring/loki/: config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo.yaml
monitoring/vector/: vector.toml
reminder/: main.py  pyproject.toml
reporter/: .env.docker  .env.template  Dockerfile  README.md  justfile  pyproject.toml
reporter/src/reporter/: config.py  main.py
reporter/src/reporter/application/: dto.py  interfaces.py  report.py
reporter/src/reporter/domain/: models.py
reporter/src/reporter/infrastructure/email/: fake.py
reporter/src/reporter/infrastructure/excel/: generator.py
reporter/src/reporter/infrastructure/log/: setup.py
reporter/src/reporter/infrastructure/weather/: client.py
reporter/src/reporter/presentation/rmq/: handler.py  middleware.py
user/: .env.template  go.mod  go.sum  justfile
user-service/: go.mod  go.sum  justfile
user-service/cmd/http/: main.go
user-service/config/: config.template.yaml  local.yaml
user-service/internal/config/: config.go
user-service/internal/storage/postgres/: postgres.go
user/cmd/: main.go
user/configs/: config.template.toml
user/internal/application/persistence/: persistence.go
user/internal/domain/common/aggregate/: aggregate.go
user/internal/domain/common/events/: events.go
user/internal/infrastructure/config/: loader.go
user/internal/infrastructure/db/: db.go
user/internal/infrastructure/db/config/: config.go
user/internal/infrastructure/db/migrations/: 20240603202918_users_table_init.sql  tools.go
user/internal/infrastructure/db/uow/: uow.go
user/internal/infrastructure/di/: di.go
user/internal/infrastructure/di/db/: db.go
user/internal/infrastructure/di/logger/: logger.go
user/internal/infrastructure/logger/: logger.go
user/internal/infrastructure/logger/config/: config.go
user/internal/presentation/api/: api.go
user/internal/presentation/api/config/: config.go
user/internal/presentation/config/: config.go  factories.go
user/internal/presentation/di/api/: api.go
user/internal/presentation/di/config/: config.go
weather/: .env.docker  .env.template  Dockerfile  README.md  justfile  pyproject.toml
weather/src/weather/: api.py  config.py  generator.py  logger.py  main.py  models.py
