[project]
name = "diary"
version = "0.1.0"
description = "Blood pressure diary"
readme = "README.md"
authors = [
    {name = "treaditup", email = "treaditup@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b10",
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "fastapi>=0.115.12",
    "faststream>=0.5.39",
    "greenlet>=3.2.1",
    "orjson>=3.10.18",
    "psycopg>=3.2.7",
    "psycopg-binary>=3.2.7",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 120
target-version="py313"
src = ["src"]
include = ["src/**.py"]

lint.select = [
    "ALL",
]

lint.ignore = [
    "ARG",
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PT001",
    "PT023",
    "SIM108",
    "SIM114",
    "TRY003",
    "PLW2901",
    "RET505",
    "ISC001",
    "UP035",
    "COM812",
    "G004",
]

[tool.ruff.lint.per-file-ignores]
"src/diary/infrastructure/db/migrations/**" = [
    "INP001",
    "ERA001",
    "I001",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["src"]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
packages = ["src"]
python_version = "3.13"

strict = true
pretty = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true
