[project]
name = "weather"
version = "0.1.0"
description = "Weather api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-monitor>=0.6.0",
    "common",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]

[tool.uv.sources]
common = { path = "../common" }
